--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@nextui-org/react": "^2.4.6",
     "@tanstack/react-query": "^5.53.3",
+    "bcryptjs": "^2.4.3",
     "framer-motion": "^11.3.31",
     "hugeicons-react": "^0.3.0",
     "lucia": "^3.2.0",
@@ -39,6 +40,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
